# mcp-server-kalshi

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.cursor/rules/: new-client-intergrations.mdc  python.mdc  request-schema.mdc
.github/workflows/: deploy.yml
.notes/: project_overview.md
src/: kalshi_client.py  server.py
src/mcp_server_kalshi/: config.py  kalshi_client.py  schema.py  server.py
tests/: test_client.py
